# Rendezvous

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
front/: app.json  package-lock.json  package.json  tsconfig.json
front/app/: .Registration.tsx.swp  LoginIcon.tsx  LoginStyles.jsx  Registration.tsx  RegistrationStyles.jsx  ReloadIcon.tsx  _layout.tsx  chatList.tsx  chatListIcons.tsx  chatListStyles.tsx  chatStyles.tsx  index.tsx
front/app/chat/: [id].tsx
front/app/context/: UserContext.tsx  WebSocketContext.tsx
server_messenger/include/: globals.h  websocket.h
server_messenger/src/: database.cpp  main.cpp  message.cpp  websocket.cpp
